--- a/index.html
+++ b/index.html
@@ -106,48 +106,111 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Senior Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+              <h3 class="mb-0">Software Engineer</h3>
+              <div class="subheading mb-3">iSeatz</div>
+              <p>Middleware applications development using Ruby, acting as Tech lead for HPO project: American Express travel home redesign (https://travel.americanexpress.com/hotel?inav=travel_hotels_gem)</p>
+              <p>
+                Technologies:
+                <ul>
+                  <li>Ruby 2.3.1</li>
+                  <li>Rails 5</li>
+                </ul>
+              </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2013 - Present</span>
+              <span class="text-primary">September 2016 - Present</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+              <h3 class="mb-0">Co Founder</h3>
+              <div class="subheading mb-3">Workaround Rosario</div>
+              <p>Workaround it's a coworking space located in Rosario, Santa Fe, Argentina. Our main objective is to provide a nice environment that allow our coworkers to develop their business as if they were located in their own office.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
+              <span class="text-primary">July 2016 - Present</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+              <h3 class="mb-0">Co Owner</h3>
+              <div class="subheading mb-3">Gonzoft</div>
+              <p>Gonzoft provides software solutions to local business based on topnotch technologies, primarly web sites and web applications development.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
+              <span class="text-primary">June 2014 - Present</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+              <h3 class="mb-0">Full Stack Developer</h3>
+              <div class="subheading mb-3">Centro</div>
+              <p>Application development mainly based on Ruby on Rails, AngularJS and PostgresDB.
+
+              Third party API integrations: Facebook and Twitter Ads API.
+              Async jobs using sidekiq.
+              Server maintenance.
+              Deployments.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">September 2008 - June 2010</span>
+              <span class="text-primary">August 2015 - September 2016</span>
             </div>
           </div>
 
+          <div class="resume-item d-flex flex-column flex-md-row">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Web Developer</h3>
+              <div class="subheading mb-3">Kinnser Software</div>
+              <p>Application development mainly based on Coldfusion (Adobe) and Angular JS.</p>
+              <p>Kinnser® was founded in 2003 by a young software developer who had an ambitious vision — to improve home health care. He set up an office inside a home health agency and created software that was as easy to use as it was powerful.
+
+              It’s the most widely used software in home health today.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">December 2013 - August 2015</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Senior QA Lead/Automation</h3>
+              <div class="subheading mb-3">Kinnser Software</div>
+              <p>QA Team lead and automation team lead.</p>
+              <p>Kinnser® was founded in 2003 by a young software developer who had an ambitious vision — to improve home health care. He set up an office inside a home health agency and created software that was as easy to use as it was powerful.
+
+              It’s the most widely used software in home health today.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">March 2012 - November 2013</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">QA Automation</h3>
+              <div class="subheading mb-3">iContact</div>
+              <p>QA automation done with Ruby, Selenium and Cucumber.</p>
+              <p>Since 2003, small and medium businesses worldwide have achieved significant results by turning to iContact’s best-in-class automation and email marketing solutions and knowledgeable team members. Made scalable to serve the needs of high-volume senders, professional marketers, and businesses new to email, iContact’s easy-to-use technology, available in both English and Spanish versions, ensures that every customer has what they need – whenever they need it – to succeed. Headquartered in Morrisville, NC, iContact is an award-winning company in the Cision family of brands.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">April 2011 - March 2012</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Tester QA</h3>
+              <div class="subheading mb-3">Lowes</div>
+              <p>QA analyst / tester in a near shore team.</p>
+              <p>For more than 60 years, Lowe's has been Improving Home Improvement. Our proud past combines with a promising future.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">March 2010 - April 2011</span>
+            </div>
+          </div>
         </div>
 
       </section>
@@ -158,24 +221,22 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+              <h3 class="mb-0">Universidad Abierta Interamericana</h3>
+              <div class="subheading mb-3">Information Technologies</div>
+              <div>System's Engineer degree</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <span class="text-primary">March 2007 - Decemeber 2017</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
+              <h3 class="mb-0">Sagrado Corazón de Jesús</h3>
+              <div class="subheading mb-3">High School</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">March 2001 - December 2006</span>
             </div>
           </div>
 
