--- a/index.html
+++ b/index.html
@@ -43,16 +43,10 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+            <a class="nav-link js-scroll-trigger" href="#experience">Work Experience</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
           </li>
         </ul>
       </div>
@@ -61,16 +55,24 @@
     <div class="container-fluid p-0">
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
-        <div class="my-auto">
+        <div class="my-3">
           <h1 class="mb-0">Gonzo
             <span class="text-primary">Ghanem</span>
           </h1>
           <div class="subheading mb-5">San Luis 470 · Rosario (2000), Santa Fe, Argentina · +5493413692444 ·
             <a href="mailto:name@email.com">ghanemgo@gmail.com</a>
           </div>
-          <h3 class="mb-4">Web applications middleware developer.</h3>
-          <h3 class="mb-4">Co-owner of Workaround Coworking space.</h3>
-          <h3 class="mb-4">Amateur bass player.</h3>
+          <h4 class="mb-4">Universitary degree: Systems Engineer.</h4>
+          <h4 class="mb-4">Mostly specialized on Ruby and Ruby on Rails Development.</h4>
+          <h4 class="mb-4">Team player. Really like working on teams, learn from others and try to be helpful as much as possible.</h4>
+          <h4 class="mb-4">When possible, prefer TDD. Specs addict!</h4>
+          <h4 class="mb-4">Have some DevOps/Monitoring knowledge including: metrics, tracking, deployments, droplets, networking.</h4>
+          <h4 class="mb-4">Not an expert but can handle very well: AngularJS, Vanilla JS, CSS3, HTML5, responsive tools.</h4>
+          <h4 class="mb-4">Lot of experience developing Hibryd mobile applications with Ionic framework.</h4>
+          <h4 class="mb-4">Co-owner of Workaround Coworking space</h4>
+          <h4 class="mb-4">Co-founder of TENIO<sup>®</sup> <small>hobby app for tennis players</small></h4>
+          <h4 class="mb-4">Amateur bass player</h4>
+          <h4 class="mb-4">Amateur tennis player</h4>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.facebook.com/workaroundrosario" target="_blank">
@@ -96,24 +98,60 @@
                 </span>
               </a>
             </li>
+            <li class="list-inline-item">
+              <a href="https://www.tenio.com.ar" target="_blank">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-star fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
           </ul>
         </div>
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
-        <div class="my-auto">
-          <h2 class="mb-5">Experience</h2>
+        <div class="my-3">
+          <h2 class="mb-5">Work Experience</h2>
+
+           <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Software Engineer / CEO / Hobby</h3>
+              <div class="subheading mb-3">TENIO<sup>®</sup><strikethrough>(former APPUR)</strikethrough></div>
+              <p>Rails API that serves mobile and web applications. Development of hybrid application running currently on Android, iOS and web. AngularJS admin panel for premium users.</p>
+              <p>
+                Technologies:
+                <ul>
+                  <li>Ruby</li>
+                  <li>Rails 5</li>
+                  <li>Sidekiq</li>
+                  <li>Redis</li>
+                  <li>Postgres</li>
+                  <li>NGINX</li>
+                  <li>Ionic</li>
+                  <li>AngularJS</li>
+                </ul>
+              </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">July 2018 - Present</span>
+            </div>
+          </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Software Engineer</h3>
+              <h3 class="mb-0">Software Engineer / Tech lead</h3>
               <div class="subheading mb-3">iSeatz</div>
-              <p>Middleware applications development using Ruby, acting as Tech lead for HPO project: American Express travel home redesign (https://travel.americanexpress.com/hotel?inav=travel_hotels_gem)</p>
+              <p>API development based on Rails that serves multiple FE applications. Backend development using Ruby to connect to multiple product vendors.</p>
               <p>
                 Technologies:
                 <ul>
                   <li>Ruby 2.3.1</li>
                   <li>Rails 5</li>
+                  <li>Sidekiq</li>
+                  <li>ZMQ</li>
+                  <li>Redis</li>
+                  <li>Postgres</li>
                 </ul>
               </p>
             </div>
@@ -133,27 +171,23 @@
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Co Owner</h3>
-              <div class="subheading mb-3">Gonzoft</div>
-              <p>Gonzoft provides software solutions to local business based on topnotch technologies, primarly web sites and web applications development.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">June 2014 - Present</span>
-            </div>
-          </div>
-
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Full Stack Developer</h3>
               <div class="subheading mb-3">Centro</div>
-              <p>Application development mainly based on Ruby on Rails, AngularJS and PostgresDB.
+              <p>Application development mainly based on Ruby on Rails, AngularJS and PostgresDB. Integrated with Facebook and Twitter Advertisment APIs.</p>
 
-              Third party API integrations: Facebook and Twitter Ads API.
-              Async jobs using sidekiq.
-              Server maintenance.
-              Deployments.</p>
+              <p>
+                Technologies:
+                <ul>
+                  <li>AngularJs</li>
+                  <li>Ruby 2.3.1</li>
+                  <li>Rails 3</li>
+                  <li>Sidekiq</li>
+                  <li>Postgres</li>
+                </ul>
+              </p>
+
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2015 - September 2016</span>
@@ -164,10 +198,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Web Developer</h3>
               <div class="subheading mb-3">Kinnser Software</div>
-              <p>Application development mainly based on Coldfusion (Adobe) and Angular JS.</p>
-              <p>Kinnser® was founded in 2003 by a young software developer who had an ambitious vision — to improve home health care. He set up an office inside a home health agency and created software that was as easy to use as it was powerful.
-
-              It’s the most widely used software in home health today.</p>
+              <p>Application development mainly based on Coldfusion (Adobe) and Angular JS. HomeHealth system.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">December 2013 - August 2015</span>
@@ -178,10 +209,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Senior QA Lead/Automation</h3>
               <div class="subheading mb-3">Kinnser Software</div>
-              <p>QA Team lead and automation team lead.</p>
-              <p>Kinnser® was founded in 2003 by a young software developer who had an ambitious vision — to improve home health care. He set up an office inside a home health agency and created software that was as easy to use as it was powerful.
-
-              It’s the most widely used software in home health today.</p>
+              <p>QA Team lead and automation team lead. HomeHealth system.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">March 2012 - November 2013</span>
@@ -193,7 +221,6 @@
               <h3 class="mb-0">QA Automation</h3>
               <div class="subheading mb-3">iContact</div>
               <p>QA automation done with Ruby, Selenium and Cucumber.</p>
-              <p>Since 2003, small and medium businesses worldwide have achieved significant results by turning to iContact’s best-in-class automation and email marketing solutions and knowledgeable team members. Made scalable to serve the needs of high-volume senders, professional marketers, and businesses new to email, iContact’s easy-to-use technology, available in both English and Spanish versions, ensures that every customer has what they need – whenever they need it – to succeed. Headquartered in Morrisville, NC, iContact is an award-winning company in the Cision family of brands.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">April 2011 - March 2012</span>
@@ -205,7 +232,7 @@
               <h3 class="mb-0">Tester QA</h3>
               <div class="subheading mb-3">Lowes</div>
               <p>QA analyst / tester in a near shore team.</p>
-              <p>For more than 60 years, Lowe's has been Improving Home Improvement. Our proud past combines with a promising future.</p>
+
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">March 2010 - April 2011</span>
@@ -215,8 +242,8 @@
 
       </section>
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
-        <div class="my-auto">
+      <section class="resume-section pl-3 pr-3 p-lg-5 d-flex flex-column" id="education">
+        <div class="my-3">
           <h2 class="mb-5">Education</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
@@ -242,75 +269,6 @@
 
         </div>
       </section>
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
-        <div class="my-auto">
-          <h2 class="mb-5">Skills</h2>
-
-          <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <ul class="list-inline list-icons">
-            <li class="list-inline-item">
-              <i class="devicons devicons-html5"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-css3"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-javascript"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-jquery"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-sass"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-less"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-bootstrap"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-wordpress"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-grunt"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-gulp"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-npm"></i>
-            </li>
-          </ul>
-
-          <div class="subheading mb-3">Workflow</div>
-          <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
-          </ul>
-        </div>
-      </section>
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
-        <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
-        </div>
-      </section>
-
-
     </div>
 
     <!-- Bootstrap core JavaScript -->
