--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <h1 class="mb-0">Gonzo
             <span class="text-primary">Ghanem</span>
           </h1>
-          <div class="subheading mb-5">San Luis 470 · Rosario (2000), Santa Fe, Argentina · +5493413692444 ·
+          <div class="subheading mb-5">San Luis 470 · Rosario (2000), Santa Fe, Argentina · +5493413692444 · 31 years old · 
             <a href="mailto:name@email.com">ghanemgo@gmail.com</a>
           </div>
           <h4 class="mb-4">Universitary degree: Systems Engineer.</h4>
